--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -5,7 +5,7 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 					<tr>
-						<td><label>Mã đề tài <span class="has-required">(*)</span></label></td>
+						<td><label >Mã đề tài <span class="has-required">(*)</span></label></td>
 						<td>
 							<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form"  required>
 						</td>
@@ -110,6 +110,10 @@
 					<td>Chi <span class="has-required">(*)</span>:</td>
 					<td><input type="text" title="{{tooltips[22]}}" name="chi" ng-model="data.chi" id="chi" class="input-form" required></td>
 				</tr>
+				<tr>
+					<td>Phân chi:</td>
+					<td><input type="text" title="{{tooltips[22]}}" name="phanChi" ng-model="data.phanChi" id="phanChi" class="input-form"></td>
+				</tr>
 
 				<tr>
 					<td>Loài (nếu có):</td>
@@ -152,8 +156,77 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>17. Kích thước mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips[30]}}" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
+					<td><label>17. Kích thước mẫu <span class="has-required"> (*)</span>:</label></td>
+					<td>
+						<table style="margin-left: 7px;">						
+							<tr>
+							<td><span>Chiều cao: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuCao" name="donVi_chieuCao">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+							<tr>
+								<td><span>Chiều rộng: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuRong" ng-model="data.chieuCao" name="donVi_chieuRong">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+						
+							<tr>
+								<td><span>Chiều dài: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuDai" name="donVi_chieuDai">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+							<tr>
+								<td><span>Trọng lượng: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_trongLuong" name="donVi_trongLuong">
+											<option value="mg">mg</option>
+								         	<option value="g">g</option>
+								          	<option value="kg">kg</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+						
+							<tr>		
+								<td><span>Thể tích</span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_theTich" name="donVi_theTich">
+								          <option value="ml">ml</option>
+								          <option value="l">l</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>						
+						</table>
+					</td>
 				</tr>
 				<tr>
 					<td><label>18. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
@@ -188,6 +261,20 @@
 					<td><label>24. Địa điểm thu mẫu: </label></td>
 					<td ng-controller="PlaceController">
 					<table>
+						<tr>
+							<td>Vị trí: <span class="has-required">(*)</span>: </td>
+							<td>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-success active">
+								        <input type="radio" name="fDiaDiemThuMau" value="dat-lien" id="option2" autocomplete="off" disabled="disabled">Trên đất liền
+								    </label>
+								    <label class="btn btn-success">
+								        <input type="radio" name="fDiaDiemThuMau" value="bien" id="option1" autocomplete="off" checked disabled="disabled">Trên biển
+								    </label>
+								    
+								</div>
+							</td>
+						</tr>
 						<tr>
 							<td>Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
@@ -286,12 +373,30 @@
 					<td><input type="text" title="{{tooltips[54]}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>37. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required">(*)</span>:</label></td>
-					<td><input type="file" multiple title="{{tooltips[55]}}" name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
+					<td><label>37. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[55]}}" name="taiLieuPhanTichStr" class="input-form" required>
+							</tr></td>
+							<tr>
+								<td><input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[55]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required>
+							</tr></td>
+						</table>
+					</td>
 				</tr>
 				<tr>
-					<td><label>38. Mô tả/đặc điểm hình thái <span class="has-required">(*)</span></label></td>
-					<td><input type="file" multiple accept=".doc, .docx, .pdf" title="{{tooltips[56]}}" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" valid-file required class="input-form"></td>
+					<td><label>38. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td>
+					<td>
+					<table>
+						<tr><td>
+							<input type="text" title="{{tooltips[56]}}" ng-model="data.moTaHinhThaiStr" name ="moTaHinhThaiStr" class="input-form">		
+						</td></tr>
+						<tr><td>
+							<input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" valid-file required class="input-form">
+						</td></tr>
+					</table>
+					</td>
 				</tr>
 				<tr>
 					<td><label>39. Hình vẽ:</label></td>
@@ -373,11 +478,11 @@
 					<td><input type="text" title="{{tooltips[73]}}" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>47. Thông tin mẫu hạt phấn</label></td>
+					<td><label>45. Thông tin mẫu hạt phấn</label></td>
 					<td><input type="text" multiple title="{{tooltips[74]}}" name="thongTinMauHatPhan" ng-model="data.thongTinMauHatPhan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>48. Thông tin khác:</label></td>
+					<td><label>46. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[75]}}" name="thongTinKhac5" ng-model="data.thongTinKhac5" class="input-form"></td>
 				</tr>	
 			</table>
@@ -386,25 +491,33 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>49. Phân bố Việt Nam <span class="has-required">(*)</span>:</label></td>
+					<td><label>47. Phân bố Việt Nam <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="text" title="{{tooltips[76]}}" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr" class="input-form" required>
 						<input type="file" multiple name ="phanBoVietNamFile" ng-model="data.phanBoVietNamFile">
 					</td>
 				</tr>
 				<tr>
-					<td><label>50. Phân bố trên thế giới (nếu có):</label></td>
+					<td><label>48. Phân bố trên thế giới (nếu có):</label></td>
 					<td>
 						<input type="text" title="{{tooltips[77]}}" name="phanBoTrenTheGioiStr" ng-model="data.phanBoTrenTheGioiStr" class="input-form">
 						<input type="file" multiple name ="phanBoTrenTheGioiFile" ng-model="data.phanBoTrenTheGioiFile">
 					</td>
 				</tr>
 				<tr>
-					<td><label>51. Giá trị sử dụng:</label></td>
-					<td><input type="text" title="{{tooltips[78]}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" class="input-form"></td>
+					<td><label>49. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
+					<td>
+						<input type="" title="{{tooltips[78]}}" name="giaTriSuDung" class="input-form" ng-model="data.giaTriSuDung" list="giaTriSuDung">
+						<datalist id="giaTriSuDung">
+							<option>Khoa học</option>
+							<option>Y học</option>
+							<option>Dinh Dưỡng</option>
+							<option>Thẩm mĩ</option>
+						</datalist>
+					</td>
 				</tr>
 				<tr>
-					<td><label>52. Thông tin khác:</label></td>
+					<td><label>50. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[79]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"></td>
 				</tr>
 			</table>
@@ -413,23 +526,23 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
-					<td><label>53. Ngày nhập mẫu: </label></td>
+					<td><label>51. Ngày nhập mẫu: </label></td>
 					<td><input type="date" title="{{tooltips[80]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>54. Người giao mẫu: </label></td>
+					<td><label>52. Người giao mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[81]}}" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>55. Người nhận mẫu</label></td>
+					<td><label>53. Người nhận mẫu</label></td>
 					<td><input type="text" title="{{tooltips[82]}}" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>56. Cơ quan nhập mẫu: </label></td>
+					<td><label>54. Cơ quan nhập mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[83]}}" name="coQuanNhapVatMau" ng-model="data.coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>57. Hình thức nhập mẫu:</label></td>
+					<td><label>55. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[84]}}" ng-init="" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 							<option value=""></option>
@@ -441,7 +554,7 @@
 				</tr>
 
 				<tr>
-					<td><label>58. Trao đổi mẫu: </label></td>
+					<td><label>56. Trao đổi mẫu: </label></td>
 					<td>
 						<select title="{{tooltips[85]}}" name="traoDoiMau" ng-init="" class="select-box" ng-model="data.traoDoiMau">
 							<option value=""></option>
@@ -451,7 +564,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>59. Vay mượn mẫu:</label></td>
+					<td><label>57. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[86]}}" name="vayMuon" ng-model="data.vayMuon">
 							<option value=""></option>
@@ -461,11 +574,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>60. Nơi lưu trữ:</label></td>
+					<td><label>58. Nơi lưu trữ:</label></td>
 					<td><input type="text" title="{{tooltips[87]}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>61. Khu lưu trữ mẫu:</label></td>
+					<td><label>59. Khu lưu trữ mẫu:</label></td>
 				</tr>
 				<tr>
 					<td>Phòng</td>
@@ -484,23 +597,23 @@
 					<td><input type="text" title="{{tooltips[91]}}" name="hop" ng-model="data.hop" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>62. Giấy phép nhập mẫu:</label></td>
+					<td><label>60. Giấy phép nhập mẫu:</label></td>
 					<td><input type="file" title="{{tooltips[92]}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+					<td><label>61. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td><input type="file" title="{{tooltips[93]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>64. Người nhập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
+					<td><label>62. Người nhập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[94]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>65. Người nhập thông tin vào phần mềm:</label></td>
+					<td><label>63. Người nhập thông tin vào phần mềm:</label></td>
 					<td><input type="text" title="{{tooltips[95]}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>66. Thông tin khác:</label></td>
+					<td><label>64. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[96]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"></td>
 				</tr>
 			</table>
@@ -509,7 +622,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
-					<td><label>67. Thông tin khác</label></td>
+					<td><label>65. Thông tin khác</label></td>
 					<td><input type="text" title="{{tooltips[97]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"></td>
 				</tr>
 			</table>
