--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -4,7 +4,7 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
-					<td><label>Mã đề tài  <span class="has-required">(*)</span>: </label></td>
+					<td><label>01 đề tài  <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
 						<!-- <ng-include src="/app/views/errors/err.blade.html" scope="" onload=""></ng-include> -->
@@ -16,29 +16,29 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>01. Số hiệu thực địa  <span class="has-required">(*)</span>:</label></td>
+					<td><label>02. Số hiệu thực địa  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
+					<td><label>03. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>03. Số hiệu BTTNVN:</label></td>
+					<td><label>04. Số hiệu BTTNVN:</label></td>
 					<td><input type="text"  title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
 
-				<!-- <tr>
-					<td><label >04. Mã kí hiệu mẫu vật quốc tế:</label></td>
+				<tr>
+					<td><label>05. Mã kí hiệu mẫu vật quốc tế:</label></td>
 					<td><input type="text"  title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
-				</tr> -->
+				</tr>
 
 				<tr>
-					<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
+					<td><label>06. Các kí hiệu mẫu vật khác:</label></td>
 					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>06. Thông tin khác:</label></td>
+					<td><label>07. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"></td>
 				</tr>
 			</table>
@@ -47,23 +47,23 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU VẬT</h3>
 				<tr>
-					<td><label>07. Tên Việt Nam  <span class="has-required">(*)</span>:</label></td>
+					<td><label>08. Tên Việt Nam  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>08. Tên địa phương:</label></td>
+					<td><label>09. Tên địa phương:</label></td>
 					<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>09. Tên Tiếng Anh:</label></td>
+					<td><label>10. Tên Tiếng Anh:</label></td>
 					<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>10. Tên theo hệ thống PL của bảo tàng:</label></td>
+					<td><label>11. Tên theo hệ thống PL của bảo tàng:</label></td>
 					<td><input type="text" title="{{tooltips[10]}}" name="tenTheoBaoTang" ng-model="data.tenTheoBaoTang" class="input-form"></td>
 				</tr>
 
-				<tr><td><label>11. Tên khoa học (tên latin)</label></td></tr>
+				<tr><td><label>12. Tên khoa học (tên latin)</label></td></tr>
 				<tr>
 					<td>Tên đồng nghĩa: </td>
 					<td><input type="text" title="{{tooltips[11]}}" name="tenDongNghia" ng-model="data.tenDongNghia" id="tenDongNghia" class="input-form"></td>
@@ -81,16 +81,32 @@
 					<td><input type="text" title="{{tooltips[14]}}" name="lop" ng-model="data.lop" id="lop" class="input-form" required></td>
 				</tr>
 				<tr>
+					<td>Phân lớp  <span class="has-required">(*)</span>: </td>
+					<td><input type="text" title="{{tooltips[14]}}" name="phanLop" ng-model="data.phanLop" id="phanLop" class="input-form" required></td>
+				</tr>
+				<tr>
 					<td>Bộ  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[15]}}" name="bo" ng-model="data.bo" id="bo" class="input-form" required></td>
+				</tr>
+				<tr>
+					<td>Liên họ: </td>
+					<td><input type="text" title="{{tooltips[15]}}" name="lienHo" ng-model="data.lienHo" id="lienHo" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Họ  <span class="has-required">(*)</span>: </td>
 					<td><input type="text" title="{{tooltips[16]}}" name="ho" ng-model="data.ho" id="ho" class="input-form" required></td>
 				</tr>
 				<tr>
+					<td>Phân họ: </td>
+					<td><input type="text" title="{{tooltips[16]}}" name="phanHo" ng-model="data.phanHo" id="phanHo" class="input-form"></td>
+				</tr>
+				<tr>
 					<td>Chi/Giống: </td>
 					<td><input type="text" title="{{tooltips[17]}}" name="chi" ng-model="data.chi" id="chi" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Phân Chi/Phân Giống: </td>
+					<td><input type="text" title="{{tooltips[17]}}" name="chiGiong" ng-model="data.chiGiong" id="chiGiong" class="input-form"></td>
 				</tr>
 
 				<tr>
@@ -102,11 +118,11 @@
 					<td><input type="text" title="{{tooltips[19]}}" name="duoiLoai" ng-model="data.duoiLoai" class="input-form" id="duoiLoai"></td>
 				</tr>
 				<tr>
-					<td><label>12. Người định tên: </label></td>
+					<td><label>13. Người định tên: </label></td>
 					<td><input type="text" title="{{tooltips[20]}}" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form" ></td>
 				</tr>
 				<tr>
-					<td><label>13. Thông tin khác:</label></td>
+					<td><label>14. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"></td>
 				</tr>
 			</table>
@@ -134,8 +150,77 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>17. Kích thước mẫu  <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips[25]}}" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
+					<td><label>17. Kích thước mẫu <span class="has-required"> (*)</span>:</label></td>
+					<td>
+						<table style="margin-left: 7px;">						
+							<tr>
+							<td><span>Chiều cao: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuCao" name="donVi_chieuCao">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+							<tr>
+								<td><span>Chiều rộng: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuRong" ng-model="data.chieuCao" name="donVi_chieuRong">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+						
+							<tr>
+								<td><span>Chiều dài: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_chieuDai" name="donVi_chieuDai">
+								          <option value="mm">mm</option>
+								          <option value="cm">cm</option>
+								          <option value="m">m</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+							<tr>
+								<td><span>Trọng lượng: </span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_trongLuong" name="donVi_trongLuong">
+											<option value="mg">mg</option>
+								         	<option value="g">g</option>
+								          	<option value="kg">kg</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>
+						
+							<tr>		
+								<td><span>Thể tích</span></td>
+								<td>					    
+								    <span class="box">
+								      <input type="text" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
+								      <select class="contentselect" ng-model="data.donVi_theTich" name="donVi_theTich">
+								          <option value="ml">ml</option>
+								          <option value="l">l</option>
+								       </select>
+								    </span>
+								</td>
+							</tr>						
+						</table>
+					</td>
 				</tr>
 				<tr>
 					<td><label>18. Tình trạng mẫu  <span class="has-required">(*)</span>:</label></td>
@@ -171,6 +256,20 @@
 					<td><label>24. Địa điểm thu mẫu: </label></td>
 					<td ng-controller="PlaceController">
 						<table>
+							<tr>
+								<td>Vị trí: <span class="has-required">(*)</span>: </td>
+								<td>
+									<div class="btn-group" data-toggle="buttons">
+										<label class="btn btn-success active">
+									        <input type="radio" name="fDiaDiemThuMau" value="dat-lien" id="option2" autocomplete="off" disabled="disabled">Trên đất liền
+									    </label>
+									    <label class="btn btn-success">
+									        <input type="radio" name="fDiaDiemThuMau" value="bien" id="option1" autocomplete="off" checked disabled="disabled">Trên biển
+									    </label>
+									    
+									</div>
+								</td>
+							</tr>
 							<tr>
 								<td>Quốc gia <span class="has-required">(*)</span>: </td>
 								<td>
@@ -258,8 +357,17 @@
 					<td><input type="text" title="{{tooltips[46]}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>34. Tài liệu phân tích/giám định/phân loại đi kèm  <span class="has-required">(*)</span>:</label></td>
-					<td><input type="file" multiple title="{{tooltips[47]}}" name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
+					<td><label>34. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[47]}}" name="taiLieuPhanTichStr" class="input-form" required>
+							</tr></td>
+							<tr>
+								<td><input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[47]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required>
+							</tr></td>
+						</table>
+					</td>
 				</tr>
 				<tr>
 					<td><label>35. Kết quả phân tích định tuổi: </label></td>
@@ -366,7 +474,7 @@
 					<td><input type="text" title="{{tooltips[68]}}" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>47. Thông tin khác:</label></td>
+					<td><label>45. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[69]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"></td>
 				</tr>	
 			</table>
@@ -375,25 +483,33 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>48. Phân bố Việt Nam  <span class="has-required">(*)</span>:</label></td>
+					<td><label>46. Phân bố Việt Nam  <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="text" title="{{tooltips[70]}}" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr" class="input-form">
 						<input type="file" multiple name ="phanBoVietNamFile" ng-model="data.phanBoVietNamFile">
 					</td>
 				</tr>
 				<tr>
-					<td><label>49. Phân bố trên thế giới (nếu có):</label></td>
+					<td><label>47. Phân bố trên thế giới (nếu có):</label></td>
 					<td>
 						<input type="text" title="{{tooltips[71]}}" name="phanBoTrenTheGioiStr" ng-model="data.phanBoTrenTheGioiStr" class="input-form">
 						<input type="file" multiple name ="phanBoTrenTheGioiFile" ng-model="data.phanBoTrenTheGioiFile">
 					</td>
 				</tr>
 				<tr>
-					<td><label>50. Giá trị sử dụng:</label></td>
-					<td><input type="text" title="{{tooltips[72]}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" class="input-form"></td>
+					<td><label>48. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
+					<td>
+						<input type="" title="{{tooltips[72]}}" name="giaTriSuDung" class="input-form" ng-model="data.giaTriSuDung" list="giaTriSuDung">
+						<datalist id="giaTriSuDung">
+							<option>Khoa học</option>
+							<option>Y học</option>
+							<option>Dinh Dưỡng</option>
+							<option>Thẩm mĩ</option>
+						</datalist>
+					</td>
 				</tr>
 				<tr>
-					<td><label>51. Thông tin khác:</label></td>
+					<td><label>49. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[73]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"></td>
 				</tr>	
 			</table>
@@ -402,23 +518,23 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
-					<td><label>52. Ngày nhập mẫu: </label></td>
+					<td><label>50. Ngày nhập mẫu: </label></td>
 					<td><input type="date" title="{{tooltips[74]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>53. Người giao mẫu: </label></td>
+					<td><label>51. Người giao mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[75]}}" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>54. Người nhận mẫu</label></td>
+					<td><label>52. Người nhận mẫu</label></td>
 					<td><input type="text" title="{{tooltips[76]}}" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>55. Cơ quan nhập mẫu: </label></td>
+					<td><label>53. Cơ quan nhập mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[77]}}" name="coQuanNhapVatMau" ng-model="data.coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>56. Hình thức nhập mẫu:</label></td>
+					<td><label>54. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[78]}}" name="hinhThucNhapMau">
 							<option value=""></option>
@@ -430,7 +546,7 @@
 				</tr>
 
 				<tr>
-					<td><label>57. Trao đổi mẫu: </label></td>
+					<td><label>55. Trao đổi mẫu: </label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[79]}}" name="traoDoiMau">
 							<option value=""></option>
@@ -440,7 +556,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>58. Vay mượn mẫu:</label></td>
+					<td><label>56. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[80]}}" name="vayMuon">
 							<option value=""></option>
@@ -451,11 +567,11 @@
 				</tr>
 
 				<tr>
-					<td><label>59. Nơi lưu trữ mẫu:</label></td>
+					<td><label>57. Nơi lưu trữ mẫu:</label></td>
 					<td><input type="text" title="{{tooltips[81]}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>60. Khu lưu trữ mẫu:</label></td>
+					<td><label>58. Khu lưu trữ mẫu:</label></td>
 				</tr>
 				<tr>
 					<td>Phòng</td>
@@ -474,23 +590,23 @@
 					<td><input type="text" title="{{tooltips[82]}}" name="hop" ng-model="data.hop" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>61. Giấy phép nhập mẫu:</label></td>
+					<td><label>59. Giấy phép nhập mẫu:</label></td>
 					<td><input type="file" title="{{tooltips[83]}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>62. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+					<td><label>60. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td><input type="file" title="{{tooltips[84]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>63. Người nhập phiếu mẫu vật  <span class="has-required">(*)</span>:</label></td>
+					<td><label>61. Người nhập phiếu mẫu vật  <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[85]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>64. Người nhập thông tin vào phần mềm:</label></td>
+					<td><label>62. Người nhập thông tin vào phần mềm:</label></td>
 					<td><input type="text" title="{{tooltips[86]}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>65. Thông tin khác:</label></td>
+					<td><label>63. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[87]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"></td>
 				</tr>	
 			</table>
@@ -499,7 +615,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
-					<td><label>66. Thông tin khác</label></td>
+					<td><label>64. Thông tin khác</label></td>
 					<td><input type="text" title="{{tooltips[88]}}" name="thongTinKhac" ng-model="data.thongTinKhac9" class="input-form"></td>
 				</tr>
 			</table>
