--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -146,23 +146,23 @@
 			<tr>
 				<td><label>14. Loại mẫu <span class="has-required"> (*)</span>:</label></td>
 				<td>
-					<select class="select-box" ng-init="" ng-model="data.loaiMau" required title="{{tooltips[29]}}" name="loaiMau">
-						<option value=""></option>
+					<input type="text" title="{{tooltips[29]}}" name="loaiMauVat" class="input-form" ng-model="data.loaiMauVat" list="loaiMauVat">
+					<datalist id="loaiMauVat">
 						<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 						<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 						<option value="Mẫu type">Mẫu type</option>
-					</select>
+					</datalist>
 				</td>
 			</tr>
+			<tr><td><label>15. Kích thước mẫu <span class="has-required"> (*)</span>:</label></td></tr>
 			<tr>
-				<td><label>15. Kích thước mẫu <span class="has-required"> (*)</span>:</label></td>
 				<td>
 					<table style="margin-left: 7px;">						
 						<tr>
 						<td><span>Chiều cao: </span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
+							      <input type="text" title="{{tooltips[30]}}" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
 							      <select class="contentselect" ng-model="data.donVi_chieuCao" name="donVi_chieuCao">
 							          <option value="mm">mm</option>
 							          <option value="cm">cm</option>
@@ -175,7 +175,7 @@
 							<td><span>Chiều rộng: </span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
+							      <input type="text" title="{{tooltips[30]}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
 							      <select class="contentselect" ng-model="data.donVi_chieuRong" ng-model="data.chieuCao" name="donVi_chieuRong">
 							          <option value="mm">mm</option>
 							          <option value="cm">cm</option>
@@ -189,7 +189,7 @@
 							<td><span>Chiều dài: </span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
+							      <input type="text" title="{{tooltips[30]}}" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
 							      <select class="contentselect" ng-model="data.donVi_chieuDai" name="donVi_chieuDai">
 							          <option value="mm">mm</option>
 							          <option value="cm">cm</option>
@@ -202,7 +202,7 @@
 							<td><span>Trọng lượng: </span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
+							      <input type="text" title="{{tooltips[30]}}" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
 							      <select class="contentselect" ng-model="data.donVi_trongLuong" name="donVi_trongLuong">
 										<option value="mg">mg</option>
 							         	<option value="g">g</option>
@@ -216,7 +216,7 @@
 							<td><span>Thể tích</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
+							      <input type="text" title="{{tooltips[30]}}" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
 							      <select class="contentselect" ng-model="data.donVi_theTich" name="donVi_theTich">
 							          <option value="ml">ml</option>
 							          <option value="l">l</option>
@@ -256,22 +256,15 @@
 				<td><label>21. Phương pháp thu mẫu <span class="has-required"> (*)</span>:</label></td>
 				<td><input type="text" ng-model="data.phuongPhapThuMau" title="{{tooltips[36]}}" name="phuongPhapThuMau" class="input-form" required></td>
 			</tr>
+			<tr><td><label>22. Địa điểm thu mẫu: </label></td></tr>
 			<tr>
-				<td><label>22. Địa điểm thu mẫu: </label></td>
 				<td ng-controller="PlaceController">
 					<table>
 						<tr>
-							<td>Vị trí: <span class="has-required">(*)</span>: </td>
+							<td>Vị trí: </td>
 							<td>
-								<div class="btn-group" data-toggle="buttons">
-									<label class="btn btn-success active">
-								        <input type="radio" name="fDiaDiemThuMau" value="dat-lien" id="option2" autocomplete="off" disabled="disabled">Trên đất liền
-								    </label>
-								    <label class="btn btn-success">
-								        <input type="radio" name="fDiaDiemThuMau" value="bien" id="option1" autocomplete="off" checked disabled="disabled">Trên biển
-								    </label>
-								    
-								</div>
+						        <input type="radio" name="fDiaDiemThuMau" value="dat-lien" ng-model="datLien" ng-click="showstar()" id="datLien"> Trên đất liền 
+						        <input type="radio" name="fDiaDiemThuMau" value="bien" id="trenBien" ng-click="hidestar()" ng-model="trenBien"> Trên biển
 							</td>
 						</tr>
 						<tr>
@@ -283,7 +276,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Tỉnh/Thành phố<span class="has-required"> (*)</span>: </td>
+							<td>Tỉnh/Thành phố<span ng-show="star" class="has-required"> (*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[38]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-click="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
@@ -291,7 +284,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Huyện<span class="has-required">(*)</span>:</td>
+							<td>Huyện<span ng-show="star" class="has-required">(*)</span>:</td>
 							<td>
 								<select class="select-box" title="{{tooltips[39]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-click="districtChange()">
 									<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
@@ -299,7 +292,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Xã<span class="has-required"> (*)</span>: </td>
+							<td>Xã<span ng-show="star" class="has-required"> (*)</span>: </td>
 							<td>
 								<select class="select-box" ng-model="data.xa" title="{{tooltips[40]}}" name="xa" required>
 									<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
@@ -371,30 +364,22 @@
 				<td><label>34. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required"> (*)</span>:</label></td>
 				<td><input type="text" ng-model="data.coQuanToChucPhanTich" title="{{tooltips[54]}}" name="coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 			</tr>
+			<tr><td><label>35. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td></tr>
 			<tr>
-				<td><label>35. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td>
 				<td>
-					<table>
-							<tr>
-								<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[55]}}" name="taiLieuPhanTichStr" class="input-form" required>
-							</tr></td>
-							<tr>
-								<td><input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[55]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required>
-							</tr></td>
-					</table>
+					<input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[55]}}" name="taiLieuPhanTichStr" class="input-form" required>
+				</td>
+				<td>
+					<input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[55]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required>
 				</td>
 			</tr>
+			<tr><td><label>36. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td></tr>
 			<tr>
-				<td><label>36. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td>
 				<td>
-				<table>
-					<tr><td>
-						<input type="text" title="{{tooltips[56]}}" ng-model="data.moTaHinhThaiStr" name ="moTaHinhThaiStr" class="input-form">		
-					</td></tr>
-					<tr><td>
-						<input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" valid-file required class="input-form">
-					</td></tr>
-				</table>
+					<input type="text" title="{{tooltips[56]}}" ng-model="data.moTaHinhThaiStr" name ="moTaHinhThaiStr" class="input-form">		
+				</td>
+				<td>
+					<input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" valid-file required class="input-form">
 				</td>
 			</tr>
 			<tr>
@@ -434,7 +419,7 @@
 				</td>
 				</tr>
 			<tr>
-				<td><label>44. Video:</label></td>
+				<td><label>44. Đính kèm phim, video:</label></td>
 				<td>
 					<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form">
 				</td>
@@ -555,11 +540,11 @@
 			<tr>
 				<td><label>56. Hình thức nhập mẫu:</label></td>
 				<td>
-					<select class="select-box" ng-init="" ng-model="data.hinhThucNhapMau" title="{{tooltips[83]}}" name="hinhThucNhapMau">
-						<option value=""></option>
+					<input type="text" list="hinhThucNhapMau" class="select-box" title="{{tooltips[83]}}" ng-model="data.hinhThucNhapMau" name="hinhThucNhapMau">
+					<datalist id="hinhThucNhapMau">
 						<option value="Thu thập">Thu thập</option>
 						<option value="Hiến tặng">Hiến Tặng</option>
-					</select>
+					</datalist>
 				</td>
 			</tr>
 			<tr>
